# Gmaster_detect

./: CMakeLists.txt  package.xml
include/: detect.h  process.h
include/detect/: detect.h  process.h
launch/: detect.launch.py
src/: detect.cpp  detect_node.cpp  process.cpp
