<?xml version="1.0"?>
<package format="3">
  <name>detect</name>
  <version>0.0.1</version>
  <description>Image detect node</description>

  <maintainer email="supzj@example.com">supzj</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


